--- a/CadastroChurrasco/Cadastro.css
+++ b/CadastroChurrasco/Cadastro.css
@@ -15,7 +15,9 @@ body{
     border-radius: 5px;
     box-shadow: 5px 5px 10px #c45e1a;   
     align-items: center;  
-    margin-left: 25%;
+    margin-left: 35%;
+    width: 550px;
+    
 }
 #cadastro-form h2 {
     text-align: center;   
